@startuml diagram

class Pieces
{
    -m_Description : string
    -m_Numero_serie : int
    -m_Reference : string
    -m_Dictionary<Pieces, int> : Dictionary<Pieces,int>
    +AjoutPieces
    +PrepareListe() : List<Pieces>
    +GetListePieces() : Dictionary <<Get>>
    +GetDescription(): string <<Get>>
    +GetNumeroSerie(): int <<Get>>
    +GetReference(): string <<Get>>
}

class Pieces_assemblage

class Piece_Moulee

class Piece_Usinee

class Piece_SousEnsemble
{
    -m_Sous_Emsemble_Components : Dictionary
    +AjoutPieces() : void
    +GetListePieces() : Dictionary <<Get>>
    +PrepareListe() : List<pieces>
}

Pieces <|-- Piece_Moulee
Pieces <|-- Pieces_assemblage
Pieces <|-- Piece_Usinee
Pieces <|-- Piece_SousEnsemble


@enduml
